# wficmp

./: .gitignore  .mailmap  Makefile.am  VERSION  configure.ac  index.html
build-aux/: CC0-1.0-AC-COPYRIGHT.ac  CC0-1.0-AM-COPYRIGHT.am  DATE.sh  GATBPS_CONFIG_FILE_RULES.am  GATBPS_RECIPE_MARKER.am  GATBPS_VPATH_SEARCH.am  GATBPS_V_PAD.am  INPUT_FILTER.sh.in  PACKAGE_STRING.df.in  VERSION.sh  doxygen.am  echo.sh  sh-form.sh  texinfo.css
build-src/: Doxyfile-wficmp  Doxyfile-wficmp.df  doxygen_dep.am  doxygen_depv.am  doxygen_dfv.am  include_HEADERS.am  include_HEADERS.am_dfv_INPUT
dev-aux/: CC0-1.0-file.txt  Makefile.am.vim  XXXX-XX-XX-WFICMP-X-X-X.texi  YYYY-MM-DD-WFICMP-X-Y-Z.texi  configure.ac.vim  format.ac.vim  format.am.vim  special-files.mk
doc/: wficmp.texi
doc/texi/: Copyright-Information.texi
doc/texi/wficmp/: Introduction.texi
gh-pages/: .gitattributes
gh-pages/dev-aux/: CC0-1.0-commit.txt
include/: wficmp.h
m4/: DEFINE_ALL.m4  DEFINE_AT.m4  DEFINE_AWK.m4  DEFINE_DOXYGEN.m4  GATBPS_CONFIG_FILE.m4  GATBPS_CONFIG_FILE_SUBST.m4  GATBPS_DEFINE_AT.m4  GATBPS_DEFINE_DATE.m4  GATBPS_MSG_ERROR.m4  GATBPS_MSG_NOTICE.m4  GATBPS_PROG_AWK.m4  GATBPS_PROG_DOXYGEN.m4  gatbps_fatal.m4  gatbps_notice.m4
tsr/: 20160530T035639Z-b05ff107c49493776e0acf50a7ff15b15f243f3c-certum.tsr  20160530T035650Z-b05ff107c49493776e0acf50a7ff15b15f243f3c-safecreative.tsr  20161111T054925Z-4e08df5d4034b42abed0e23359aad5d5b4c143b2-certum.tsr  20161111T054936Z-4e08df5d4034b42abed0e23359aad5d5b4c143b2-comodo.tsr  20161111T054947Z-4e08df5d4034b42abed0e23359aad5d5b4c143b2-freetsa.tsr  20161111T055000Z-4e08df5d4034b42abed0e23359aad5d5b4c143b2-safecreative.tsr  20161111T055011Z-4e08df5d4034b42abed0e23359aad5d5b4c143b2-startcom.tsr
tsr/certificates/: e2dcb64a.0
tsr/certs/: 895bd6bc.pem
